force-app/main/default/objects/FieloPLT__ErrorLog__c/FieloPLT__ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Internal object. Information when an unexpected error occurs.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>