force-app/main/default/objects/FieloPLT__ErrorLog__c/fields/FieloPLT__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LineNumber__c</fullName>
    <description>Line number where an error occurs.</description>
    <inlineHelpText>Line number where an error occurs.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>