force-app/main/default/objects/FieloPLT__ErrorLog__c/fields/FieloPLT__Message__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Message__c</fullName>
    <description>Error message.</description>
    <inlineHelpText>Error message.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>