force-app/main/default/objects/FieloPLT__ErrorLog__c/fields/FieloPLT__UserId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UserId__c</fullName>
    <description>ID of the user.</description>
    <inlineHelpText>ID of the User.</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>