force-app/main/default/objects/FieloPLT__ErrorLog__c/listViews/FieloPLT__AllErrorLogs.listView-meta.xml
<ListView>
    <fullName>FieloPLT__AllErrorLogs</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Error Logs</label>
    <language>en_US</language>
</ListView>